# MerCury

./: .dockerignore  .env.example  .envrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pymarkdown.json  CHANGELOG.md  CLAUDE.md  Deployment.md  Dockerfile  INSTALL.md  LICENSE  Makefile  MerCury.spec  README.md  SECURITY.md  USAGE.md  activate.ps1  activate.sh  alembic.ini  commands.txt  coverage.xml  coverage_report.txt  docker-compose.yml  dummy.txt  fix.py  fix_app.py  fix_env.py  fix_events.py  fix_local.py  fix_port.py  fix_socket.py  install.ps1  install.sh  patch_service2.py  patch_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  (+17 more)
.claude/: launch.json  settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
config/: config.yaml  nginx.conf  placeholders.yaml
data/: .encryption.salt  .gitkeep  mercury.db.bak
deploy/: Caddyfile
docs/: API.md  Deployment.md  QUICKSTART.md  SECURITY.md  openapi.yaml
examples/: error_handling_demo.py
logs/: .gitkeep
mercury/: pyvenv.cfg
mercury/Scripts/: activate  activate.bat  bottle.py  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng
migrations/: env.py
migrations/versions/: 20251215_0728_6a8d103842df_add_dead_letter_queue.py  20260106_1240_f76827f0acc7_add_identity_and_settings_models.py  20260106_1241_a9fac8c2c465_restore_deadletter.py  20260509_0001_e8b3c1f5a2d9_add_last_event_columns_to_emaillogs.py  20260515_0001_a1c5d9e3f721_add_tls_mode_to_smtpservers.py  20260521_0001_b8e4a2f1c9d6_add_custom_placeholders_table.py  20260521_0002_c9d4e8b1a7f2_drop_legacy_use_tls_use_ssl.py  20260522_0001_e4d8a9b2c7f1_align_emaillogs_with_model.py  20260529_1656_bc1ddeece32f_add_ip_warmup_to_smtpservers.py  20260529_1948_0ec82046918a_add_html_path_to_templates.py
plan/: upgrade-python-compatibility-1.md
scripts/: build_dmg.sh  migrate_settings.py  mypy_gate.sh  run_tests.py
src/mercury/: __init__.py  __main__.py  app_context.py  autostart.py  config.py  exceptions.py
src/mercury/cli/: __init__.py  main.py
src/mercury/data/: __init__.py  database.py
src/mercury/data/models/: __init__.py  attachment.py  base.py  campaign.py  dead_letter.py  email_log.py  identity.py  placeholder.py  recipient.py  settings.py  smtp.py  template.py  user.py
src/mercury/data/repositories/: __init__.py  attachment.py  base.py  campaign.py  dead_letter.py  logs.py  placeholder.py  recipient.py  smtp.py  template.py  user.py
src/mercury/engine/: __init__.py  async_sender.py  circuit_breaker.py  connection_pool.py  dead_letter_worker.py  enhanced_sender.py  error_aggregator.py  error_recovery.py  rate_limiter.py  retry_queue.py
src/mercury/features/: __init__.py  branding.py  encoding.py  generators.py  geolocation.py  placeholders.py  rotation.py  template_engine.py  user_agent.py
src/mercury/migrations/: env.py
src/mercury/migrations/versions/: 20240101_0001_initial_schema.py  20260416_0001_b3e1c7a9d2f5_add_global_settings_columns.py  20260416_0002_c4f8e2b1a3d6_add_encoding_columns_to_global_settings.py  20260503_0001_d7a2f8e4b9c1_drop_smtp_rate_counter_columns.py  20260510_0001_f9c4d8a2b1e3_add_attachments_table.py  20260630_2003_fe7db3bf61ca_sync_models_with_schema.py  20260701_0123_73c12b078823_complete_schema_missing_tables.py
src/mercury/security/: __init__.py  auth.py  encryption.py
src/mercury/services/: __init__.py  bounce_service.py  campaign_runner.py  campaign_service.py  dead_letter_service.py  email_service.py  identity_service.py  scheduler_service.py  settings_service.py  smtp_service.py  tracking_service.py  webhook_service.py
src/mercury/utils/: __init__.py  app_dirs.py  async_io.py  lock_manager.py  logging_config.py  logging_context.py  metrics.py  validation.py  validators.py
src/mercury/web/: __init__.py  app.py  decorators.py  events.py  extensions.py  metrics.py  observability.py
src/mercury/worker/: __init__.py  queue.py  tasks.py
src/unified_sender/: __init__.py  app_context.py  config.py  exceptions.py
src/unified_sender/cli/: __init__.py  main.py
src/unified_sender/data/: database.py
src/unified_sender/engine/: __init__.py  async_sender.py  circuit_breaker.py  connection_pool.py  enhanced_sender.py  error_aggregator.py  error_recovery.py  rate_limiter.py  retry_queue.py
src/unified_sender/features/: __init__.py  generators.py  placeholders.py  template_engine.py
src/unified_sender/security/: auth.py  encryption.py
src/unified_sender/services/: __init__.py  campaign_service.py  dead_letter_service.py  email_service.py  scheduler_service.py  smtp_service.py  tracking_service.py
src/unified_sender/utils/: __init__.py  logging_config.py  logging_context.py  validation.py
src/unified_sender/web/: __init__.py  app.py  extensions.py
templates/: cli_template.html  email.html
tests/: __init__.py  conftest.py  test_api_dead_letter.py  test_api_ext_coverage_boost.py  test_api_extended.py  test_api_recipients.py  test_api_routes_coverage.py  test_app_boot_seam.py  test_app_context_coverage.py  test_async_sender.py  test_async_sender_extended.py  test_attachments_routes.py  test_auth_coverage.py  test_auth_extended.py  test_auth_extra_coverage.py  test_auth_routes.py  test_bounce_service_coverage.py  test_bounce_service_extended.py  test_branding.py  test_business_metrics.py  test_campaign_runner.py  test_campaign_service_coverage.py  test_campaigns_api_routes.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_config_dataclass_contract.py  test_configuration_overhaul.py  test_connection_pool.py  test_connection_pool_additional_coverage.py  test_connection_pool_coverage.py  test_connection_pool_extended.py  test_core_services_coverage_boost.py  test_coverage_boost.py  test_csrf.py  test_dead_letter_service.py  test_dead_letter_worker.py  test_dynamic_content.py  test_email_attachments.py  test_email_branding.py  (+73 more)
tests/e2e/: conftest.py  test_ui_flows.py
tests/stress/: test_csv_loader_edge_cases.py
(+79 files in other folders)
