[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury"
version = "2.0.0"
description = "Production-grade email automation platform with async sending, security, tracking, and campaign management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "MerCury Team"}
]
keywords = ["email", "automation", "campaign", "smtp", "bulk-email", "tracking", "webhooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core - Pinned versions for stability
    "aiosmtplib==3.0.2",
    "pyyaml==6.0.1",
    "click==8.1.7",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.36",
    "alembic==1.13.1",
    
    # Web UI
    "flask==3.0.0",
    "flask-socketio==5.3.6",
    "python-socketio==5.11.0",
    "flask-login==0.6.3",
    "flask-limiter==3.5.1",
    "flask-cors==4.0.0",
    "flask-wtf==1.2.1",
    
    # Security
    "cryptography==42.0.1",
    "passlib==1.7.4",
    "bcrypt==4.1.2",
    
    # Document Generation
    "qrcode[pil]==7.4.2",
    "pillow==10.4.0",
    "reportlab==4.0.9",
    "python-docx==1.1.0",
    
    # Email
    "email-validator==2.1.0.post1",
    
    # Async I/O
    "aiofiles==23.2.1",
    
    # Scheduling
    "apscheduler==3.10.4",
    
    # HTTP Client (webhooks)
    "httpx==0.26.0",
    
    # Logging
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    
    # Utilities
    "python-dotenv==1.0.0",
    "tqdm==4.66.1",
    "pysocks==1.7.1",
    "rich==13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0",
    "ruff==0.1.14",
    "black==24.1.1",
    "mypy==1.8.0",
    "types-pyyaml==6.0.12.12",
    "ipython==8.20.0",
    "pre-commit==3.6.0",
    "faker==22.5.1",
]
pdf = [
    # Better PDF generation (requires system dependencies)
    "weasyprint>=60.0",
]
all = [
    "mercury[dev,pdf]",
]

[project.scripts]
mercury = "mercury.cli.main:main"

[project.urls]
Homepage = "https://github.com/mercury/mercury"
Documentation = "https://github.com/mercury/mercury#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

# Globally ignored rules:
# - E712: `Column == True` is the SQLAlchemy filter-expression idiom, not a
#   Python identity-vs-equality bug. Rewriting as `is True` would break the
#   query (it would no longer compile to SQL).
ignore = ["E712"]

# Extend the default (E, F) rule set with:
# - T201: ban `print()` in src/. The codebase uses structlog; print() bypasses
#   the configured handlers (JSON output, log file, log levels) and silently
#   degrades observability in production. Per-file-ignores below allow it in
#   CLI-adjacent scripts where stdout *is* the interface.
extend-select = ["T201"]

[tool.ruff.per-file-ignores]
# Tests get more ergonomic latitude:
#   F841 — `with patch(...) as mock_X` patterns where the binding is
#          intentional documentation even when unused.
#   E701 — multi-statement lines like `if cond: assert ...` common in tests.
#   E741 — single-letter names (`l`, `i`) in throwaway scopes.
#   T201 — tests legitimately use print() for diagnostic output.
"tests/**/*.py" = ["F841", "E701", "E741", "T201"]
# E2E suite can import availability probes that look unused.
"tests/e2e/**/*.py" = ["F401"]
# scripts/ and examples/ are CLI-adjacent — stdout is the interface.
"scripts/**/*.py" = ["T201"]
"examples/**/*.py" = ["T201"]
# migrations/env.py is alembic-generated; don't fight upstream.
"migrations/**/*.py" = ["T201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
